--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-streamlit>=1.36
-google-generativeai
-pandas
-numpy
+streamlit>=1.36.0
+google-generativeai>=0.3.0
+pandas>=2.0.0
+numpy>=1.24.0
+sentence-transformers>=2.2.0
+scikit-learn>=1.2.0
+torch>=1.9.0
+transformers>=4.21.0
