--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit>=1.36.0
-google-generativeai>=0.3.0
-pandas>=2.0.0
-numpy>=1.24.0
-sentence-transformers>=2.2.0
-scikit-learn>=1.2.0
-torch>=1.9.0
-transformers>=4.21.0
+google-generativeai
+pandas
+numpy
+sentence-transformers
+scikit-learn
+torch
+transformers
